--- a/scs_scheme.html
+++ b/scs_scheme.html
@@ -45,8 +45,8 @@
                         topics from basic HTML to C# programming, iOS development, data analysis, and more.
                         By completing courses users can earn points, allowing them to track their progress 
                         and see how much they?ve covered in certain areas.</p>
-                        <span class="T_S">Total Score</span>
-                        <span><a href="#">teamtreehouse.com/xxxxx</a></span>
+                        <span class="T_S">Total Score: 3,750</span>
+                        <span><a href="https://teamtreehouse.com/theodorelorenc2">teamtreehouse.com/theodorelorenc2</a></span>
                     </div>
                 </div>
                 <br><br>
