Miner style adjustments

--- a/about_me.html
+++ b/about_me.html
@@ -28,9 +28,9 @@
             <div class="about_me_section">
                 <h2 class="about_me_section_title">Personal Statment</h2>
                 <p>With exceptional problem-solving skills, I am able to analyse problems
-                 and break them down into their component parts. Then solving each part in a logical
+                 and break them down into their component parts. Then solve each part in a logical
                  sequence to ensure the problem is solved in the most efficient and acurate way. maintaining focus while working
-                 independently coming easly to me as I am motivated to work to the best of my ability rather then any minimum requirment.
+                 independently comes easly to me as I am motivated to work to the best of my ability rather then any minimum requirment.
                  When working in cooperation with others I utilise my communication and organisational
                  skills to ensure they are able to make the most of there time. Also
                  When I require asistence I ask for it imidiantly to ensure that I am making the most of my time.
@@ -42,7 +42,7 @@
                  of equipment across Europe and the UK. I made certain everything was accurate, clear and
                  sent out to relevant parties to meet a hard deadline. inspired by my interest in consistant and logical working
                  I declided to persue a career in computer programing. This lead me to apply for the
-                 <a href="scs_scheme.html"></a>Scion Scheme</a>, a project run by
+                 <a href="scs_scheme.html">Scion Scheme</a>, a project run by
                  Netmatters to provide the nessary skills training to enter the computer programing industry, I was accepted onto
                  the course and am now training to be a web developer.</p>
             </div>
