I have changed the styling slightly

--- a/scs_scheme.html
+++ b/scs_scheme.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <br><br>
-                <div class="scs_section">
+                <div class="scs_section netmatters">
                     <h2>About Netmatters</h2>
                     <ul>
                         <li>Established in 2008</li>
