--- a/about_me.html
+++ b/about_me.html
@@ -27,24 +27,20 @@
             </div>
             <div class="about_me_section">
                 <h2 class="about_me_section_title">Personal Statment</h2>
-                <p>With exceptional problem-solving skills, I am able to analyse problems
-                 and break them down into their component parts. Then solve each part in a logical
-                 sequence to ensure the problem is solved in the most efficient and acurate way. maintaining focus while working
-                 independently comes easly to me as I am motivated to work to the best of my ability rather then any minimum requirment.
-                 When working in cooperation with others I utilise my communication and organisational
-                 skills to ensure they are able to make the most of there time. Also
-                 When I require asistence I ask for it imidiantly to ensure that I am making the most of my time.
-                 With a sharp eye for detail, I can quickly identify discrepancies and highlight issues that
-                 may have caused these discrepancies and further establish what problems have or could have occurred as a result.</p> 
+                <p>With exceptional problem-solving skills, I am able to analyse problems and break them down into their component parts.
+                 Then solve each part in a logical sequence to ensure the problem is solved in the most efficient and accurate way. Maintaining
+                 focus while working independently comes easily to me as I am motivated to work to the best of my ability rather then any minimum
+                 requirement. When working in cooperation with others, I utilise my communication and organisational skills to ensure they are
+                 able to make the most of there time. Also, when I require assistance, I ask for it immediately to ensure that I am making the
+                 most of my time. With a sharp eye for detail, I can quickly identify discrepancies and highlight issues that may have caused
+                 these discrepancies and further establish what problems have or could have occurred as a result.</p> 
                  
-                <p>Previous I worked as a Planning Administrator at Transam Trucking Limited I worked within strict Legal 
-                 regulations and company policy to create detailed travel plans to assist transportation 
-                 of equipment across Europe and the UK. I made certain everything was accurate, clear and
-                 sent out to relevant parties to meet a hard deadline. inspired by my interest in consistant and logical working
-                 I declided to persue a career in computer programing. This lead me to apply for the
-                 <a href="scs_scheme.html">Scion Scheme</a>, a project run by
-                 Netmatters to provide the nessary skills training to enter the computer programing industry, I was accepted onto
-                 the course and am now training to be a web developer.</p>
+                <p>Previous I worked as a Planning Administrator at Transam Trucking Limited I worked within strict legal regulations and
+                 company policy to create detailed travel plans to assist transportation of equipment across Europe and the UK. I made certain
+                 everything was accurate, clear and sent out to relevant parties to meet a hard deadline. Inspired by my interest in consistent
+                 and logical work, I decided to persue a career in computer programming. This led me to apply for the 
+                 <a class="inline_scs" href="scs_scheme.html">Scion Scheme</a>, a project run by Netmatters to provide the necessary skills training to enter the
+                 computer programing industry. I was accepted onto the course and am now training to be a web developer.</p>
             </div>
             <div class="about_me_first_rows">
                 <div class="about_me_section key_skills">
@@ -75,22 +71,22 @@
                     GCSEs: Biology: A, Chemistry: B, Design & Technology: B, English Language: 5, English Literature: 6,
                     Geography: B, Mathematics: 7, Physics: A, Religious Studies: C</p>
 
-                    <h3><a href="scs_scheme.html">Netmatters - Scion Scheme</a></h3>
+                    <h3><a class="scion_scheme" href="scs_scheme.html">Netmatters - Scion Scheme</a></h3>
                 </div>
             </div>
             <div class="about_me_section">
                 <h2 class="about_me_section_title">Aspirations</h2>
-                <p>I apsire to be a compuer programmer. I would find the process of identifying the limitations and problems of current software, 
-                 working out how these problems can be solved and then writing code for purpose driven software 
-                 and extremely satisfying process. Being a computer programmer requires you to be extremely logical 
-                 when creating software as you may be required to adapt your code as a result of a change of requirement; 
-                 being a computer programmer would allow me to utilize my logical-think and problem-solving skills.</p>
+                <p>I aspire to be a computer programmer. I would find the process of identifying the limitations and problems of current
+                 software, working out how these problems can be solved, and then writing code for purpose-driven software and extremely
+                 satisfying process. Being a computer programmer requires you to be extremely logical when creating software as you may be
+                 required to adapt your code as a result of a change of requirement; being a computer programmer would allow me to utilize
+                 my logical-think and problem-solving skills.</p>
                 
-                <p>To create the best code possible working alongside other programmers is often required. This is to the
-                 effect of consolidating solutions to different aspects of the software being developed and deciding which 
-                 solutions should be implemented into the final iteration of the software. This is an atmosphere I would thrive in: 
-                 I am able to work independently and therefore generate my own solutions and also work in collaboration with others when 
-                 combining our ideas to create code for programs and software that we are unable to create independently.</p>              
+                <p>To create the best code possible, working alongside other programmers is often required. This is to the effect of consolidating
+                 solutions to different aspects of the software being developed and deciding which solutions should be implemented into the final
+                 iteration of the software. This is an atmosphere I would thrive in: I am able to work independently and therefore generate my own
+                 solutions and also work in collaboration with others when combining our ideas to create code for programs and software that we are
+                 unable to create independently.</p>              
             </div>
         </main>
     </body>
