I have started adding JavaScript to the project

--- a/about_me.html
+++ b/about_me.html
@@ -89,5 +89,7 @@
                  unable to create independently.</p>              
             </div>
         </main>
+        <script src="js/jquery-3.6.3.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
