--- a/coding_examples.html
+++ b/coding_examples.html
@@ -32,5 +32,7 @@
                 <p class="code_example">Example text 2</p>
             </div>
         </div>
+        <script src="js/jquery-3.6.3.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
