--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
 
                             </textarea>
                         </div>
-                        <button class="form_button" type="submit">Send</button>
+                        <button class="form_button">Send</button>
                     </form>
                 </div>
             </main>
         </div>
+        <!-- <script src="js/jquery-3.6.3.min.js"></script> -->
+        <script src="js/main.js"></script>
     </body>
 </html>
