--- a/scs_scheme.html
+++ b/scs_scheme.html
@@ -65,5 +65,7 @@
                 </div>
             </div>
         </main>
+        <script src="js/jquery-3.6.3.min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
