The side column now displays when the button is pressed  my name. is typed out when the page loads.

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
                 </dive>
                 <div class="form_wrapper" id="con">
-                    <form class="contact_form">
+                    <form class="contact_form" action="index.html#con" method="GET">
                         <div class="form_title_container">
                             <h1 class="form_title">CONTACT ME</h1>
                         </div>
@@ -100,17 +100,14 @@
                         <div class="label_input">
                             <label for="message">Message</label>
                             <textarea id="message">
-
-
-
                             </textarea>
                         </div>
-                        <button class="form_button">Send</button>
+                        <button type="submit" class="form_button">Send</button>
                     </form>
                 </div>
             </main>
         </div>
-        <!-- <script src="js/jquery-3.6.3.min.js"></script> -->
+        <script src="js/jquery-3.6.3.min.js"></script>
         <script src="js/main.js"></script>
     </body>
 </html>
