--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
                     <button class="menu_button"><img src="icons/190-menu.png" alt="Menu Button"></button>
                 </div>
                 <div class="scroll_down_down_arrow">
-                    <!-- <span class="scroll_down">Scroll Down</span> -->
-                    <img class="down_arrow" src="icons/319-arrow-down2.png">
+                    <button class="down_button"><img src="icons/319-arrow-down2.png"></button>
                 </div>
             </header>
             <main>
@@ -73,34 +72,34 @@
                     </div>
                 </dive>
                 <div class="form_wrapper" id="con">
-                    <form class="contact_form" action="index.html#con" method="GET">
+                    <form id="contact_form" action="index.html" method="GET">
                         <div class="form_title_container">
                             <h1 class="form_title">CONTACT ME</h1>
                         </div>
+                        <div id="error"></div>
                         <div class="form_first_rows">
                             <div class="label_input right_input">
                                 <label for="first_name">First name</label>
-                                <input type="text" id="first_name">
+                                <input type="text" id="first_name" name="first_name">
                             </div>
                             <div class="label_input">
                                 <label for="last_name">Last name</label>
-                                <input type="text" id="last_name">
+                                <input type="text" id="last_name" name="last_name">
                             </div>
                         </div>
                         <div class="form_first_rows">
                             <div class="label_input right_input">
                                 <label for="email">Email address</label>
-                                <input type="email" id="email">
+                                <input type="text" id="email" name="email">
                             </div>
                             <div class="label_input">
                                 <label for="subject">Subject</label>
-                                <input type="text" id="subject">
+                                <input type="text" id="subject" name="subject">
                             </div>
                         </div>
                         <div class="label_input">
                             <label for="message">Message</label>
-                            <textarea id="message">
-                            </textarea>
+                            <textarea type="text" id="message" name="message"></textarea>
                         </div>
                         <button type="submit" class="form_button">Send</button>
                     </form>
