I have updated the portfolio

--- a/about_me.html
+++ b/about_me.html
@@ -46,18 +46,20 @@
                 <div class="about_me_section key_skills">
                     <h2 class="about_me_section_title">Key Skills</h2>
                     <ul>
-                        <li>150 hours of HTML experence.</li>
-                        <li>150 hours of css/scss experence.</li>
-                        <li>Strong communicator with the ability to convey complex ideas in a clear and concise manner.
-                        <li>Experienced in Microsoft Office (Word, Excel, PowerPoint, Outlook)
-                        <li>Exceptional numeracy skills 
-                        <li>Inquisitive with an outgoing personality
-                        <li>Polite and professional telephone manner
-                        <li>Strong organisational skills
-                        <li>Pro-active with a “can do” attitude and prefers to be kept busy
-                        <li>Logical thinker with astute analytical and information processing skills
-                        <li>Confident working in a fast-paced environment
-                        <li>Pro-active and enthusiastic
+                        <li>200 hours of HTML experence</li>
+                        <li>200 hours of css/scss experence</li>
+                        <li>60 hours of Javascript/jQuery experence</li>
+                        <li>Experienced in GitHub</li>
+                        <li>Strong communicator with the ability to convey complex ideas in a clear and concise manner</li>
+                        <li>Experienced in Microsoft Office (Word, Excel, PowerPoint, Outlook)</li>
+                        <li>Exceptional numeracy skills</li>
+                        <li>Inquisitive with an outgoing personality</li>
+                        <li>Polite and professional telephone manner</li>
+                        <li>Strong organisational skills.</li>
+                        <li>Pro-active with a &#34;can do&#34; attitude and prefers to be kept busy</li>
+                        <li>Logical thinker with astute analytical and information processing skills</li>
+                        <li>Confident working in a fast-paced environment</li>
+                        <li>Pro-active and enthusiastic</li>
                     </ul>
                 </div>
                 <div class="about_me_section education">
