Adding box shadow to the project cards

--- a/about_me.html
+++ b/about_me.html
@@ -44,23 +44,18 @@
             </div>
             <div class="about_me_first_rows">
                 <div class="about_me_section key_skills">
-                    <h2 class="about_me_section_title">Key Skills</h2>
-                    <ul>
-                        <li>200 hours of HTML experence</li>
-                        <li>200 hours of css/scss experence</li>
-                        <li>60 hours of Javascript/jQuery experence</li>
-                        <li>Experienced in GitHub</li>
-                        <li>Strong communicator with the ability to convey complex ideas in a clear and concise manner</li>
-                        <li>Experienced in Microsoft Office (Word, Excel, PowerPoint, Outlook)</li>
-                        <li>Exceptional numeracy skills</li>
-                        <li>Inquisitive with an outgoing personality</li>
-                        <li>Polite and professional telephone manner</li>
-                        <li>Strong organisational skills.</li>
-                        <li>Pro-active with a &#34;can do&#34; attitude and prefers to be kept busy</li>
-                        <li>Logical thinker with astute analytical and information processing skills</li>
-                        <li>Confident working in a fast-paced environment</li>
-                        <li>Pro-active and enthusiastic</li>
-                    </ul>
+                    <h2 class="about_me_section_title">Why I want a career in technology</h2>
+                    <p>I believe that technology is what defines us as a species. Ultimately, the difference between what
+                     civilisation was, is now and will be in the future is the capacity to produce, deploy and regulate
+                     technology. I want to be a part of the driving force behind this assessment, to push the boundaries
+                     of what is possible and what we can achieve as a species. </p>
+                    <p>Global development is increasing at an exponential rate amid globalization. The relationship between
+                     global development and time shows we have passed the inflection point where 1 unit of time corresponds
+                     to a greater than 1 unit of global development. As we become more efficient in a globalised world the
+                     consumption of energy will increase and thus software to manage efficiency is fundamental. This is no more
+                     pressing than in the transportation industry. A career in technology would allow me to be apart of this. My
+                     logical thinking and problem-solving skills position me as a good candidate to create digital systems that
+                     are more efficient and effective than those we have currently.</p>
                 </div>
                 <div class="about_me_section education">
                     <h2 class="about_me_section_title">Education</h2>
