--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <img class="project_img" src="imgaes/link_image.png" alt="Linking an image to an email">
                             <div class="project_card_bottom">
                                 <h2>JavaScript Array Reflection</h2>
-                                <p><a href="#">Examine Project</a></p>
+                                <p><a href="https://theodore-ui.github.io/Javascript_Array_Reflection/">Examine Project</a></p>
                             </div>
                         </div>
                         <div class="project_card">
