--- a/coding_examples.html
+++ b/coding_examples.html
@@ -100,9 +100,9 @@
                         18) }
                     </p>
                     <p class="description">
-                    1 Establishing a function that will display a menu on the left of the page menu a button is clicked or retract the menu if the
+                    1 Establishing a function that will display a menu on the left of the page when a button is clicked or retract the menu if the
                      button is clicked while the menu is visible.<br><br> 
-                    2 - 10 If the menu is hidden when the funtion is called then the menu slides in to the page from the right. The page shifts
+                    2 - 10 If the menu is hidden when the funtion is called then the menu slides into the page from the right. The page shifts
                      to the left to make room for the menu. The page is unable to be scrolled through. The pages scrollbar is displayed left of the memu.
                      An ex icon is displayed inside the button that executes the function. The burger icon is removed from the button.
                      A see through grey element is display over the page.<br><br>
@@ -138,10 +138,10 @@
                     1 Establishing a function that stores an email address and an image src array as an object in a database or adds an image src to an
                      exsisting image array.<br><br>
                     2 Establishing the variable "emailExists" that will be used to deside whether to create a new object or to add an item to an image array.<br><br>
-                    4 - 12 A loop that iterates through the object in the database and checks if the email address that is beging inputted is already an
+                    4 - 12 A loop that iterates through the objects in the database and checks if the email address that is beging inputted is already an
                      item in the database. If the email address exists "emailExists" will equal true and the inputted image src will be stored in the image array
                      associated with the inputted email address. Otherwsie "emailExists" will equal false.<br><br>
-                    13 - 15 If "emailExists" equals false an object is created in the database containing the inputting email address and an image array containing
+                    13 - 15 If "emailExists" equals false an object is created in the database containing the inputtied email address and an image array containing
                     the inputted image src.  
                     </p>
                 </div>
