I have added a favicon and made general corrections

--- a/coding_examples.html
+++ b/coding_examples.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/normalize.css">
         <title>Theodore Lorenc Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
     <body>
         <div class="side_column">
@@ -150,7 +151,7 @@
                 <h2 class="code_example_title">Example: SQL selecting data from a database</h2>
                 <div class="example_description">
                     <div class="code_example">
-                        <img src="https://www.w3resource.com/w3r_images/employee-database.png">
+                        <img src="https://www.w3resource.com/w3r_images/employee-database.png" alt="Table structure of an employee database">
                         <p class="code">
                             1)   SELECT emp_name, job_name FROM employees<br> 
                             3)   WHERE salary > 2000.00 AND<br>
@@ -192,5 +193,6 @@
         </div>
         <script src="js/jquery-3.6.3.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="https://kit.fontawesome.com/1e403b2a33.js" crossorigin="anonymous"></script>
     </body>
 </html>
