--- a/about_me.html
+++ b/about_me.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/normalize.css">
         <title>Theodore Lorenc Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
     <body>
         <div class="side_column">
@@ -16,6 +17,7 @@
                 <li><a href="scs_scheme.html">S.C.S Scheme</a></li>
                 <li><a href="about_me.html">About me</a></li>
                 <li><a href="index.html#con">Contact me</a></li>
+                <li><a href="#"><i class="fa-brands fa-square-github"></i></a></li>
             </ul>
         </div>
         <main class="about_me_main">
@@ -88,5 +90,6 @@
         </main>
         <script src="js/jquery-3.6.3.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="https://kit.fontawesome.com/1e403b2a33.js" crossorigin="anonymous"></script>
     </body>
 </html>
