--- a/scs_scheme.html
+++ b/scs_scheme.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/normalize.css">
         <title>Theodore Lorenc Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
     <body>
         <div class="side_column">
@@ -67,5 +68,6 @@
         </main>
         <script src="js/jquery-3.6.3.min.js"></script>
         <script src="js/main.js"></script>
+        <script src="https://kit.fontawesome.com/1e403b2a33.js" crossorigin="anonymous"></script>
     </body>
 </html>
